fix overflow css

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     border: none;
     font-family: sans-serif, 'Times New Roman', Times, serif;
     scroll-behavior: smooth;
+   overflow-x: hidden;
 /* transition: all 0.9s ease-in-out; */
     
 }
@@ -28,6 +29,7 @@ body {
     background-color: black;
     padding: 0;
     margin: 0;
+ 
 }
 
 /* HEADER */
@@ -661,6 +663,7 @@ body {
 .card .card-container .card-item {
     text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
     margin-bottom: 10px;
+    overflow-x: visible !important;
 
 
 }
